ACA/configuration-ha/security/baca-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: $KUBE_NAME_SPACE
  name: baca-netpol
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      productID: ibm-dba-aca-prod
  policyTypes:
  - Ingress
